# wgpu_tutorial

./: Cargo.toml  cube.mtl
src/: camera_controller.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
