[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
tokio = { version = "*", features = ["full"] }
bytemuck = { version = "*", features = ["derive"] }
image = { version = "*", default-features = false, features = ["png"] }
anyhow = "*"
cgmath = "*"
tobj = { version = "3.2.1", features = ["async"] }